--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
@@ -20,6 +21,7 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.2.0"
   },
