--- a/react_native_app/package.json
+++ b/react_native_app/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.2.0"
   },
