mise en place du player streaming

--- a/react_native_app/app.json
+++ b/react_native_app/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/logo.png",
     "splash": {
-      "image": "./assets/logoUFM.png",
+      "image": "./assets/splashufm.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
