--- a/react_native_app/package.json
+++ b/react_native_app/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/stack": "^5.9.0",
     "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~38.0.8",
+    "expo-av": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "link": "^0.1.5",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -23,6 +25,7 @@
     "react-native-screens": "^2.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.2.0"
   },
