integration du player

--- a/react_native_app/package.json
+++ b/react_native_app/package.json
@@ -20,13 +20,18 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-audio-streaming": "^2.3.2",
+    "react-native-banner-carousel": "^1.0.3",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.9.2",
+    "react-native-youtube": "^2.0.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
